Got basic login/auth-management
This is obviously not the way to be going forward. Need to look into React Contexts and things, the better to share the same authentication data across components.

(Or session storage? Maybe session storage ...)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 devitae:
   auth:
     jwt:
-      # Users can remain authenticated for this long (in minutes) before their sessions expire.
+      # JWT tokens will expire after this interval.
       timeout: 1
       timeoutUnit: HOURS
       # Keystore for JWT signing and verification.
@@ -51,5 +51,5 @@ spring:
 logging:
   level:
     org.snowjak.devitae: debug
-    org.springframework.security: trace
-    org.springframework.web: trace
+    org.springframework.security: debug
+    org.springframework.web: debug
