Added Heroku/ClearDB config-var to Spring's config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     name: devitae
   datasource:
     embedded-database-connection: none
+    url: jdbc:${CLEARDB_DATABASE_URL}
   jpa:
     generate-ddl: false
     open-in-view: false
