That free MySQL doesn't work, let's try the free MariaDB

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     name: devitae
   datasource:
     embedded-database-connection: none
-    url: jdbc:${CLEARDB_DATABASE_URL}
+    url: jdbc:${JAWSDB_MARIA_URL}
   jpa:
     generate-ddl: false
     open-in-view: false
